@@ -11,6 +11,7 @@ OpenLDAP 2.4.23 Engineering
 	Fixed slapd-bdb to use memcpy instead for strcpy (ITS#6474)
 	Fixed slapd-ldap to return control responses (ITS#6530)
 	Fixed slapo-ppolicy to use Debug (ITS#6566)
+	Fixed slapo-refint to zero out freed DN vals (ITS#6572)
 	Fixed slapo-rwm to use Debug (ITS#6566)
 	Fixed slapo-sssvlv to use Debug (ITS#6566)
 	Fixed slapo-syncprov lost deletes in refresh phase (ITS#6555)
